# metsi

./: .gitattributes  .gitignore  .gitmodules  .pep8  .pylintrc  CHANGELOG.md  DESCRIPTION  LICENSE  README.md  control.py  control.yaml  control_event_treatment.py  dev-deps.sh  export_control.yaml  fhk-requirements.txt  input.json  metsi_readme_note.md  motti-requirements.txt  mypy.ini  optional-requirements.txt  output.pickle  pp_control.yaml  pyproject.toml  requirements-fhk.txt  requirements-motti.txt  requirements.txt  test.R  test.py  toggle_proxy.py  vmi12_weibull_trees.json
.github/workflows/: build-release.yml  python-app.yml
app/: app_io.py  app_types.py  app_util.py  export.py  file_io.py  logging.py  main.py  mela2.py  post_processing.py  preprocessor.py  simulator.py
app/export_handlers/: j.py  rm_timber.py
data/parameter_files/: Thin.txt  clearcut_instructions.txt  planting_instructions.txt  renewal_ages_southernFI.txt  renewal_diameters_southernFI.txt  renewal_operation_pricing.csv  timber_price_table.csv
doc/: 20220221_sim-tree.drawio  sim_strategies_explained.md
doc/drawio/: 20220221_sim-chains.drawio  full_tree_chains.drawio  generic_binary_tree.drawio  partial_strat_first_period.drawio  partial_strat_second_period.drawio  partial_tree_chains.drawio  simple-sim-tree.drawio
domain/: post_ops.py  pre_ops.py  sim_ops.py
domain/data_collection/: biomass_repola.py  cross_cutting.py  marshalling.py  net_present_value.py
domain/forestry_operations/: clearcut.py  clearcutting_limits.py  planting.py  renewal.py  thinning.py  thinning_limits.py
domain/natural_processes/: grow_acta.py  grow_fhk.py  grow_motti.py
domain/utils/: conversion.py  file_io.py  filter.py
examples/: conditions.py  control_useMotti_library.py  control_vector.py  conversion.yaml  cvar.yaml  declarative_conversion.py  lm_tree_generation.py  lm_tree_generation.yaml  vmi12_gen_trees.py  vmi12_gen_trees.yaml  vmi12_to_rsd.yaml  vmi13_collect_additional_indices.yaml  vmi13_gen_trees.py  vmi13_gen_trees.yaml  vmi13_to_rsd.yaml  weibull_tree_generation.yaml
examples/declarations/: export_prepro.py
examples/export/: control.yaml  source.xml
forestry/: ForestDataModels.py  aggregate_utils.py  aggregates.py  biomass_repola.py  clearcut.py  clearcutting_limits.py  collected_types.py  collectives.py  cross_cutting.py  filter.py  forestry_types.py  forestry_utils.py  grow_acta.py  grow_fhk.py  grow_motti.py  net_present_value.py  operations.py  planting.py  post_processing.py  pre_ops.py  preprocessing.py  r_utils.py  renewal.py  sim_ops.py  thinning.py  thinning_limits.py  types.py  utils.py
forestry/data_collection/: biomass_repola.py  cross_cutting.py  marshalling.py  net_present_value.py
forestry/forestry_operations/: clearcut.py  clearcutting_limits.py  planting.py  renewal.py  thinning.py  thinning_limits.py
forestry/natural_processes/: grow_acta.py  grow_fhk.py  grow_motti.py
forestry/utils/: conversion.py  filter.py  growth.py
r/: lmfor_volume.R
r/cross_cutting/: ApteerausNasberg.R  Paaohjelma_func.R  Paaohjelma_old.R  Runkokayraennusteet.R  Runkokayran korjausmalli.R  Tilavuus.R  cross_cutting_main.R  source_cross_cutting_dependencies.R
r/pukkala_growth/: dtinku.txt  dtinma.txt  growthfuncs.R
sim/: ForestDataModels.py  collectives.py  computation_model.py  core_types.py  file_io.py  forestry_models.py  generators.py  main.py  operations.py  preprocessing.py  read_input.py  runners.py  util.py
tests/: computation_model_test.py  file_reading_test.py  forestry_models_test.py  generators_test.py  operations_test.py  runners_test.py  test_utils.py  yaml_library_test.py
tests/app/: app_io_test.py  export_test.py  file_io_test.py  main_test.py  r_test.py  (+1 more)
(+356 files in other folders)
