[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lukefi.metsi"
description = "Metsi forestry simulator."
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Juho-Petteri Yliuntinen", email = "juho-petteri.yliuntinen@luke.fi"},
    { name = "Daniel Melander", email = "daniel.melander@luke.fi"},
    { name = "Arto Haara", email = "arto.haara@luke.fi"},
    { name = "Laura Jaakkola", email = "laura.jaakkola@luke.fi"},
    { name = "Tapio Lempinen"},
    { name = "Urho Niemelä"}
]
dependencies = [
    "pyyaml==6.0",
    "jsonpickle==3.0.1",
    "lupa==1.14.1",
    "scipy==1.14.0",
    "geopandas == 1.0.1",
    "pandas == 2.2.2",
    "rpy2==3.5.12",
]


[project.optional-dependencies]
tests = [
    "pytest",
    "parameterized==0.8.1"
]

[project.scripts]
metsi = "lukefi.metsi.app.metsi:main"

[tool.setuptools.package-dir]
lukefi = "lukefi"

[tool.setuptools.package-data]
"lukefi.metsi.forestry.lua" = ["*"]
"lukefi.metsi.forestry.r" = ["*"]

