[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lukefi.metsi"
description = "Metsi forestry simulator."
version = "1.2.4"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Daniel Melander", email = "daniel.melander@luke.fi"},
    { name = "Reetta Lempinen", email = "reetta.lempinen@luke.fi"},
    { name = "Tapio Lempinen", email = "tapio.lempinen@luke.fi"},
    { name = "Arto Haara", email = "arto.haara@luke.fi"},
    { name = "Juho-Petteri Yliuntinen"},
    { name = "Laura Jaakkola"},
    { name = "Urho Niemelä"}
]
dependencies = [
    "pyyaml==6.0.2",
    "jsonpickle==3.0.1",
    "lupa==2.2",
    "scipy==1.14.0",
    "geopandas == 1.0.1",
    "pandas == 2.2.2",
    "rpy2==3.5.12",
    "numba==0.61.2",
    "robotframework==7.3",
]


[project.optional-dependencies]
tests = [
    "pytest",
    "parameterized==0.8.1"
]

[project.scripts]
metsi = "lukefi.metsi.app.metsi:main"

[tool.setuptools.package-dir]
lukefi = "lukefi"

[tool.setuptools.package-data]
"lukefi.metsi.forestry.lua" = ["*"]
"lukefi.metsi.forestry.r" = ["*"]

[tool.pytest.ini_options]
filterwarnings = [ 
    "ignore::pytest.PytestCollectionWarning:.*metsi.tests.app.file_io_test"
]
