[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lukefi.metsi"
description = "Metsi forestry simulator."
version = "2.1.1"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Daniel Melander", email = "daniel.melander@luke.fi" },
    { name = "Reetta Lempinen", email = "reetta.lempinen@luke.fi" },
    { name = "Tapio Lempinen", email = "tapio.lempinen@luke.fi" },
    { name = "Arto Haara", email = "arto.haara@luke.fi" },
    { name = "Juho-Petteri Yliuntinen" },
    { name = "Laura Jaakkola" },
    { name = "Urho Niemelä" },
]
dependencies = [
    "jsonpickle==4.1.1",
    "lupa==2.5",
    "geopandas == 1.1.0",
    "pandas == 2.3.0",
    "rpy2==3.6.1",
    "numba==0.61.2",
]

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-cov",
    "parameterized==0.9.0",
    "robotframework==7.3",
    "pylint==3.3.7",
    "mypy==1.16.1",
    "types-lupa==2.4.0.20250112"
]

[project.scripts]
metsi = "lukefi.metsi.app.metsi:main"

[tool.setuptools.package-dir]
lukefi = "lukefi"

[tool.setuptools.package-data]
"lukefi.metsi.forestry.lua" = ["*"]
"lukefi.metsi.forestry.r" = ["*"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::pytest.PytestCollectionWarning:.*metsi.tests.app.file_io_test",
]
